--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,17 @@
+body {
+  max-width: 960; 
+}
+
+main, #external-links {
+    vertical-align: top;
+    display: inline-block;
+    overflow: hidden;
+}
+
+main {
+  width: 60%;
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -12,6 +26,7 @@ cite {
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+  width: 30%;
 }
 
 /* you're welcome to edit the
@@ -30,3 +45,17 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
+
+@media screen and (max-width: 500 px){
+  body {
+    font-size: 80%;
+    margin: 0 auto;
+  }
+  main {
+    float: left;
+  }
+  #external-links {
+    float: left;
+  }
+}
+
